<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="insert_book_failed">Error Adding New Book</string>
    <string name="book_added">Book Added</string>
    <string name="unsaved_changes">Unsaved Changes Will Not Be Saved</string>
    <string name="delete">Delete</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="book_name">Book \n Name</string>
    <string name="quantity">Quantity</string>
    <string name="dollar_sign">$</string>
    <string name="edit_buttom_menu_label">Edit</string>
    <string name="delete_button_label_menu">Delete</string>
    <string name="buy_button_label">Buy</string>
    <string name="empty_view_label">No books to display. Please add a Book</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="subtraction_button_label">-</string>
    <string name="addition_button_label">+</string>
    <string name="unknown_uri_message">Cannot query unknown URI</string>
    <string name="insertion_failed_message">Insertion is not supported for</string>
    <string name="book_name_empty_mesage">Enter a book name</string>
    <string name="please_add_author">Please Add Author</string>
    <string name="add_price_message">Please Add a Price</string>
    <string name="add_quantity_message">Please add a Quantity Amount</string>
    <string name="add_supplier_name_message">Please Add a Supplier Name</string>
    <string name="add_supplier_number_message">Please Add A Supplier Number</string>
    <string name="failed_to_save_message">Failed to insert row for</string>
    <string name="delete_failed_message">Deletion is not supported for</string>
    <string name="update_failed_message">Update is not supported for</string>
    <string name="complete_form_message">Please Complete Form</string>
    <string name="save_button_label">Save</string>
    <string name="update_button_label">Update</string>
    <string name="add_book_title_label">Add Book</string>
    <string name="edit_book_title_label">Edit Book</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="delete_message">Are you sure you want to delete</string>
    <string name="cancel_label_delete_confirmation">Cancel</string>
</resources>
