<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bookstoreapp.DetailsActivity">

    <ImageView
        android:id="@+id/book_image_details"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="51dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/book_name_details_list"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/book_image_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:hint="Book Name"/>

    <TextView
        android:id="@+id/author_detail"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/book_name_details_list"
        android:layout_below="@+id/book_name_details_list"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        tools:text="J.K Rowling"/>

    <TextView
        android:id="@+id/book_quantity_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_image_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textSize="25sp"
        android:textAlignment="center"
        tools:text="20"
        />

    <Button
        android:id="@+id/add_quantity_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:layout_toStartOf="@+id/book_quantity_details"
        android:text="@string/addition_button_label"/>

    <Button
        android:id="@+id/subtract_quantity_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/add_quantity_button"
        android:layout_toEndOf="@+id/book_quantity_details"
        android:text="@string/subtraction_button_label"/>

    <TextView
        android:id="@+id/suppliers_name_details"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/suppliers_number_details"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        tools:text="Dr. Seus Books"/>

    <TextView
        android:id="@+id/book_price_details_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_name_details_list"
        android:layout_marginStart="19dp"
        android:textAlignment="center"
        android:layout_toEndOf="@+id/subtract_quantity_button"
        tools:text="$10.00"/>

    <TextView
        android:id="@+id/suppliers_number_details"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/order_button"
        android:layout_alignStart="@+id/suppliers_name_details"
        android:layout_marginBottom="22dp"
        android:textAlignment="center"
        tools:text="201-453-4843"/>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/order"/>


</RelativeLayout>
